# Deltran-MVP

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS_CONFIGURATION.md  AGENTS_REFACTORING_REPORT.md  AGENT_ANALYTICS_REPORT.md  AGENT_IMPLEMENTATION_GUIDE.md  AGENT_PERFORMANCE_REPORT.md  AGENT_SECURITY_REPORT.md  AGENT_STRATEGY_SUMMARY.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_COMPLIANCE_REPORT.md  ARCHITECTURE_FIX_AND_ACCOUNT_MONITOR.md  ARCHITECTURE_VALIDATION_REPORT.md  ARCHITECTURE_VALIDATION_SUMMARY.md  AUDIT_AND_STORAGE_GUIDE.md  BIG_FOUR_AUDIT_SYSTEM_COMPLETE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.txt  COMPLETE_SYSTEM_SPECIFICATION.md  CORRECT_ARCHITECTURE_DELTRAN.md  CORRECT_FLOW_WITH_OBLIGATIONS.md  CORRECT_TRANSACTION_FLOW.md  CRITICAL_FIXES_APPLIED.md  Cargo.toml  DATA_STORAGE_ARCHITECTURE.md  DELTRAN_PORT_ALLOCATION.md  DELTRAN_ROUTING_SCHEMA.md  DELTRAN_VALUE_PROPOSITION.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_INDEX.md  Dockerfile.golang.template  Dockerfile.rust.template  END_TO_END_BUILD_STATUS.md  ENHANCED_SERVICES_README.md  FINAL_ARCHITECTURE_STATUS.md  FINAL_BUILD_REPORT.md  FINAL_BUILD_STATUS_REPORT.md  FINAL_MVP_IMPLEMENTATION_STATUS.md  FINAL_MVP_STATUS.md  (+78 more)
adapters/: Cargo.toml  README.md
adapters/src/: circuit_breaker.rs  connector.rs  dlq.rs  error.rs  iso20022.rs  kill_switch.rs  lib.rs  manager.rs  metrics.rs  swift.rs  types.rs
compliance-service/: Cargo.toml
compliance-service/src/: error.rs  lib.rs  report_generator.rs  sanctions.rs  screening.rs  types.rs
consensus/: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  go.mod
consensus/cmd/node/: main.go
consensus/pkg/genesis/: generator.go
consensus/pkg/keymanager/: keymanager.go
consensus/pkg/statesync/: statesync.go
consensus/pkg/upgrade/: upgrade.go
consensus/scripts/: init-validator.sh
consensus/src/: abci.rs  config.rs  error.rs  lib.rs  state.rs
demo/orchestrator/: Cargo.toml
demo/orchestrator/src/: main.rs
ledger-core/: Cargo.toml  README.md  rocksdb.toml
ledger-core/src/: actor.rs  config.rs  crypto.rs  error.rs  ledger.rs  lib.rs  merkle.rs  metrics.rs  storage.rs  types.rs
ledger-core/tests/: property_tests.rs
message-bus/: Cargo.toml  README.md
message-bus/src/: client.rs  dlq_router.rs  error.rs  jetstream.rs  lib.rs  message.rs  metrics.rs  partitioning.rs  publisher.rs  schema_validator.rs  sharding.rs  subscriber.rs  types.rs
protocol-core/: Cargo.toml  README.md
protocol-core/compliance/: mod.rs  regulatory_api.rs  screening_service.rs
protocol-core/consensus/: batch_verifier.rs
protocol-core/fuzz/: Cargo.toml
protocol-core/fuzz/fuzz_targets/: canonical_serialization.rs  merkle_tree.rs  money_arithmetic.rs
protocol-core/fx/: config.rs  pvp_settlement.rs  quote_aggregator.rs
protocol-core/reporting/: event_reporter.rs  ifrs_mapper.rs  mod.rs  pii_protection.rs  report_generator.rs  scheduler.rs
protocol-core/sharding/: shard_coordinator.rs
protocol-core/src/: canonical.rs  checkpoint.rs  error.rs  hsm.rs  lib.rs  merkle.rs  partial.rs  proof.rs  state.rs  types.rs  validation.rs
protocol-core/src/hsm/: async_signer.rs  pkcs11.rs
protocol-core/tests/: property_tests.rs
risk-engine/: Cargo.toml
risk-engine/src/: corridor.rs  error.rs  fx_predictor.rs  lib.rs  limits.rs  scoring.rs  types.rs  velocity.rs
security/: Cargo.toml  README.md  audit_log.rs  input_sanitizer.rs  lib.rs  rate_limiter.rs  secrets_manager.rs  tls_config.rs
services/account-monitor/: Cargo.toml  Dockerfile  README.md
services/account-monitor/migrations/: 001_create_funding_events.sql  002_create_unmatched_transactions.sql
services/account-monitor/src/: bank_client.rs  camt_parser.rs  config.rs  main.rs  models.rs  monitor.rs
services/clearing-engine/: Cargo.toml  Dockerfile  MULTILATERAL_NETTING.md  NETTING_EXAMPLE.md  SPECIFICATION.md  build.rs
services/clearing-engine/proto/: clearing.proto
services/clearing-engine/src/: cache.rs  config.rs  consensus.rs  database.rs  errors.rs  lib.rs  main.rs  main_with_security.rs  models.rs  nats_consumer.rs  orchestrator.rs
services/clearing-engine/src/atomic/: checkpoint.rs  controller.rs  mod.rs  operation.rs
services/clearing-engine/src/iso20022/: camt053.rs  camt054.rs  common.rs  mod.rs  pacs008.rs  pain001.rs
services/clearing-engine/src/netting/: calculator.rs  graph_builder.rs  mod.rs  optimizer.rs
services/clearing-engine/src/window/: mod.rs  scheduler.rs
services/compliance-engine/: Cargo.toml  Dockerfile
services/compliance-engine/src/: config.rs  database.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  nats_consumer.rs
services/compliance-engine/src/aml/: mod.rs  scoring.rs
services/compliance-engine/src/pep/: checker.rs  mod.rs
services/compliance-engine/src/sanctions/: matcher.rs  mod.rs
services/gateway-rust/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
services/gateway-rust/migrations/: 20250118_001_create_payments_table.sql
services/gateway-rust/src/: db.rs  lib.rs  main.rs  metrics.rs  nats_router.rs
services/gateway-rust/src/iso20022/: camt053.rs  camt054.rs  mod.rs  pacs002.rs  pacs008.rs  pain001.rs  pain002.rs
services/gateway-rust/src/models/: canonical.rs  mod.rs
services/liquidity-router/: Cargo.toml  Dockerfile
services/liquidity-router/src/: config.rs  fx_optimizer.rs  handlers.rs  lib.rs  main.rs  models.rs  nats_consumer.rs  optimizer.rs  predictor.rs
services/liquidity-router/src/middleware/: mod.rs
services/token-engine/: .dockerignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  RECONCILIATION.md
services/token-engine/src/: config.rs  database.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  nats.rs  nats_consumer.rs  reconciliation_handlers.rs  services.rs
services/token-engine/src/reconciliation/: camt053_processor.rs  (+5 more)
services/token-engine/tests/: reconciliation_integration_test.rs
settlement/: Cargo.toml
settlement/src/: config.rs  engine.rs  error.rs  iso20022.rs  iso20022_validator.rs  lib.rs  netting.rs  scheduler.rs  types.rs  window.rs
(+543 files in other folders)
