[workspace]
members = ["adapters",
    "ledger-core", "message-bus", "protocol-core",
    "settlement",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DelTran Team"]
license = "Apache-2.0"
repository = "https://github.com/deltran/deltran-rail"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }

# UUID
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.33", features = ["serde-bincode", "serde-with-str"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha2 = "0.10"
blake3 = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Observability
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
prometheus = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Protobuf (for gRPC communication)
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10", features = ["tls"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Utilities
bytes = "1.5"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rand = "0.8"
toml = "0.8"
