[package]
name = "adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
bytes = { workspace = true }

# HTTP client (for bank APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }

# XML (for ISO 20022)
quick-xml = { version = "0.36", features = ["serialize"] }
serde-xml-rs = "0.6"

# Circuit breaker
failsafe = "1.3"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Queue (DLQ)
tokio-util = "0.7"
async-channel = "2.3"

# Metrics
prometheus = { workspace = true }
lazy_static = "1.5"

# Async trait
async-trait = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"

# Config
config = "0.14"

# Protocol types
protocol-core = { path = "../protocol-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockito = "1.5"
wiremock = "0.6"
rust_decimal_macros = "1.33"