[package]
name = "compliance-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "compliance_service"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
rust_decimal = { workspace = true }

# HTTP client for sanctions list updates
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# CSV parsing for sanctions lists
csv = "1.3"

# Regex for pattern matching
regex = "1.10"

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
