[package]
name = "ledger-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ledger_core"
path = "src/lib.rs"

[[bin]]
name = "ledger-server"
path = "src/bin/server.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
serde_bytes = "0.11"
rocksdb = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
prometheus = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.10"

[features]
default = []
# Enable this in production
production = ["rocksdb/jemalloc"]