[package]
name = "message-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

# NATS messaging
async-nats = "0.33"

# Hashing for partitioning
blake3 = { workspace = true }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Metrics
prometheus = { workspace = true }
lazy_static = "1.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
