[package]
name = "protocol-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "json"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Configuration
config = "0.13"
dotenvy = "0.15"

# Excel generation
xlsxwriter = "0.6"

# AES encryption for PII tokenization
aes-gcm = "0.10"
base64 = "0.21"

# Argon2 for tokenization key derivation
argon2 = "0.5"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
mockall = "0.12"

[lib]
path = "src/lib.rs"

[[bin]]
name = "protocol-core"
path = "src/main.rs"
