[package]
name = "security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "security"
path = "lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
rust_decimal = { workspace = true }

# TLS
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"
time = "0.3"

# Cryptography
aes-gcm = "0.10"
sha2 = { workspace = true }
hex = "0.4"

# Input validation
regex = "1.10"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.8"