[package]
name = "settlement"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "settlement"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }

# Local dependencies
ledger-core = { path = "../ledger-core" }

# Additional dependencies
quick-xml = { version = "0.31", features = ["serialize"] }

[dev-dependencies]
proptest = { workspace = true }
