[package]
name = "clearing-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-cron-scheduler = "0.10"

# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# UUID and Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Decimal
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# gRPC
tonic = "0.10"
prost = "0.12"

# NATS
async-nats = "0.33"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Graph algorithms
petgraph = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "clearing-engine"
path = "src/main.rs"
