[package]
name = "compliance-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros", "rust_decimal"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-str", "db-postgres"] }
rust_decimal_macros = "1.33"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.13"
dotenv = "0.15"
strsim = "0.11"  # For fuzzy string matching (sanctions/PEP)

# Security - JWT authentication
jsonwebtoken = "9.2"

# Rate limiting
governor = "0.6"

# Additional utilities
futures-util = "0.3"

# NATS messaging
async-nats = "0.33"

# Metrics - Prometheus
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
