[package]
name = "token-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Data types
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-str", "db-postgres"] }
rust_decimal_macros = "1.33"

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Message bus (NATS instead of Kafka)
async-nats = "0.33"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Security - JWT authentication
jsonwebtoken = "9.2"

# Rate limiting
governor = "0.6"

# Additional utilities
futures-util = "0.3"

# Metrics - Prometheus
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
